generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model attachments {
  file_id          Int       @id @default(autoincrement())
  request_id       Int?
  uploader_id      Int?
  storage_location String?   @db.VarChar
  file_type        String?   @db.VarChar
  uploaded_at      DateTime? @db.Timestamp(6)
  requests         requests? @relation(fields: [request_id], references: [request_id], onDelete: NoAction, onUpdate: NoAction)
  users            users?    @relation(fields: [uploader_id], references: [user_id], onDelete: NoAction, onUpdate: NoAction)
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model colleges {
  college_id  Int           @id @default(autoincrement())
  name        String        @unique @db.VarChar
  dean_id     Int?
  created_at  DateTime?     @default(now()) @db.Timestamp(6)
  users       users?        @relation(fields: [dean_id], references: [user_id], onDelete: NoAction, onUpdate: NoAction)
  departments departments[]
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model delegations {
  delegation_id                            Int       @id @default(autoincrement())
  request_id                               Int?
  grantor_user_id                          Int?
  grantee_user_id                          Int?
  starts_at                                DateTime? @db.Timestamp(6)
  ends_at                                  DateTime? @db.Timestamp(6)
  is_active                                Boolean?  @default(true)
  users_delegations_grantee_user_idTousers users?    @relation("delegations_grantee_user_idTousers", fields: [grantee_user_id], references: [user_id], onDelete: NoAction, onUpdate: NoAction)
  users_delegations_grantor_user_idTousers users?    @relation("delegations_grantor_user_idTousers", fields: [grantor_user_id], references: [user_id], onDelete: NoAction, onUpdate: NoAction)
  requests                                 requests? @relation(fields: [request_id], references: [request_id], onDelete: NoAction, onUpdate: NoAction)
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model departments {
  department_id                          Int      @id @default(autoincrement())
  dept_name                              String   @db.VarChar
  college_id                             Int?
  manager_id                             Int?
  colleges                               colleges? @relation(fields: [college_id], references: [college_id], onDelete: NoAction, onUpdate: NoAction)
  users_departments_manager_idTousers    users?   @relation("departments_manager_idTousers", fields: [manager_id], references: [user_id], onDelete: NoAction, onUpdate: NoAction)
  users_users_department_idTodepartments users[]  @relation("users_department_idTodepartments")
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model form_templates {
  form_id         Int            @id @default(autoincrement())
  request_type_id Int?           @unique
  name            String         @db.VarChar
  audience_config Json?          @db.Json
  is_active       Boolean?       @default(true)
  schema          Json?          @db.Json
  created_at      DateTime?      @default(now()) @db.Timestamp(6)
  request_types   request_types? @relation(fields: [request_type_id], references: [type_id], onDelete: NoAction, onUpdate: NoAction)
  requests        requests[]
}

model notifications {
  notification_id Int       @id @default(autoincrement())
  user_id         Int?
  title           String?   @db.VarChar
  message         String?   @db.VarChar
  link            String?   @db.VarChar
  created_at      DateTime? @default(now()) @db.Timestamp(6)
  users           users?    @relation(fields: [user_id], references: [user_id], onDelete: NoAction, onUpdate: NoAction)
}

model request_actions {
  action_id      Int             @id @default(autoincrement())
  request_id     Int?
  actor_id       Int?
  step_id        Int?
  action         String?         @db.VarChar
  comment        String?
  created_at     DateTime?       @default(now()) @db.Timestamp(6)
  users          users?          @relation(fields: [actor_id], references: [user_id], onDelete: NoAction, onUpdate: NoAction)
  requests       requests?       @relation(fields: [request_id], references: [request_id], onDelete: NoAction, onUpdate: NoAction)
  workflow_steps workflow_steps? @relation(fields: [step_id], references: [step_id], onDelete: NoAction, onUpdate: NoAction)
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model request_types {
  type_id        Int             @id @default(autoincrement())
  workflow_id    Int?
  key            String?         @unique @db.VarChar
  label          String?         @db.VarChar
  form_templates form_templates?
  workflows      workflows?      @relation(fields: [workflow_id], references: [workflow_id], onDelete: NoAction, onUpdate: NoAction)
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model requests {
  request_id      Int               @id @default(autoincrement())
  reference_no    String            @unique @db.VarChar
  requester_id    Int
  form_id         Int?
  current_step_id Int?
  status          String?           @db.VarChar
  submission_data Json?             @db.Json
  submitted_at    DateTime?         @default(now()) @db.Timestamp(6)
  attachments     attachments[]
  delegations     delegations[]
  request_actions request_actions[]
  workflow_steps  workflow_steps?   @relation(fields: [current_step_id], references: [step_id], onDelete: NoAction, onUpdate: NoAction)
  form_templates  form_templates?   @relation(fields: [form_id], references: [form_id], onDelete: NoAction, onUpdate: NoAction)
  users           users             @relation(fields: [requester_id], references: [user_id], onDelete: NoAction, onUpdate: NoAction)
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model roles {
  role_id        Int              @id @default(autoincrement())
  role_name      String           @unique @db.VarChar
  permissions    Json?            @db.Json
  users          users[]
  workflow_steps workflow_steps[]
  workflow_steps_escalations workflow_steps[] @relation("EscalationRole")
}

/// This model or at least one of its fields has comments in the database, and requires an additional setup for migrations: Read more: https://pris.ly/d/database-comments
model users {
  user_id                                        Int               @id @default(autoincrement())
  university_id                                  String            @unique @db.VarChar
  password_hash                                  String            @db.VarChar
  full_name                                      String            @db.VarChar
  phone                                          String?           @db.VarChar
  department_id                                  Int?
  role_id                                        Int
  is_active                                      Boolean?          @default(true)
  created_at                                     DateTime?         @default(now()) @db.Timestamp(6)
  custom_permissions                             String?           @db.Text
  attachments                                    attachments[]
  colleges                                       colleges[]
  delegations_delegations_grantee_user_idTousers delegations[]     @relation("delegations_grantee_user_idTousers")
  delegations_delegations_grantor_user_idTousers delegations[]     @relation("delegations_grantor_user_idTousers")
  departments_departments_manager_idTousers      departments[]     @relation("departments_manager_idTousers")
  notifications                                  notifications[]
  request_actions                                request_actions[]
  requests                                       requests[]
  departments_users_department_idTodepartments   departments?      @relation("users_department_idTodepartments", fields: [department_id], references: [department_id], onDelete: NoAction, onUpdate: NoAction)
  roles                                          roles             @relation(fields: [role_id], references: [role_id], onDelete: NoAction, onUpdate: NoAction)
  workflow_steps_approvals                       workflow_steps[]  @relation("WorkflowStepApprover")
}

model workflow_steps {
  step_id          Int               @id @default(autoincrement())
  workflow_id      Int?
  order            Int
  name             String?           @db.VarChar
  approver_role_id Int?
  approver_user_id Int?
  sla_hours        Int?
  is_final         Boolean?          @default(false)
  escalation_role_id Int?
  request_actions  request_actions[]
  requests         requests[]
  roles            roles?            @relation(fields: [approver_role_id], references: [role_id], onDelete: NoAction, onUpdate: NoAction)
  escalation_role  roles?            @relation("EscalationRole", fields: [escalation_role_id], references: [role_id], onDelete: NoAction, onUpdate: NoAction)
  users            users?            @relation("WorkflowStepApprover", fields: [approver_user_id], references: [user_id], onDelete: NoAction, onUpdate: NoAction)
  workflows        workflows?        @relation(fields: [workflow_id], references: [workflow_id], onDelete: NoAction, onUpdate: NoAction)
}

model workflows {
  workflow_id    Int              @id @default(autoincrement())
  name           String?          @db.VarChar
  is_active      Boolean?         @default(true)
  request_types  request_types[]
  workflow_steps workflow_steps[]
}
